infra/k8s/devops-be-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-be-depl
  namespace: mydevops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-be
  template:
    metadata:
      labels:
        app: devops-be
    spec:
      containers:
        - name: devops-be
          image: dockersrana/devops-be
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: devops-be-srv
  namespace: mydevops
spec:
  selector:
    app: devops-be
  ports:
    - name: devops-be
      protocol: TCP
      port: 8000
      targetPort: 8000
