infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: mydevops
spec:
  rules:
    - host: mydevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-fe-srv
                port:
                  number: 3000
    - host: tests.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-be-srv
                port:
                  number: 8000
